--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 moss: { category: 'plant', name: '이끼', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 200 200"><path fill="#6A994E" d="M62 138c-5-1-10-3-14-6-10-6-16-16-18-28-1-8 1-16 5-23 4-6 10-11 17-13 4-1 8-1 12 0 10 3 18 10 21 20 2 6 2 13 0 19-3 10-10 18-20 23-2 1-4 2-6 2z M138 142c-5-1-10-3-14-6-10-6-16-16-18-28-1-8 1-16 5-23 4-6 10-11 17-13 4-1 8-1 12 0 10 3 18 10 21 20 2 6 2 13 0 19-3 10-10 18-20 23-2 1-4 2-6 2z M98 92c-5-1-10-3-14-6-10-6-16-16-18-28-1-8 1-16 5-23 4-6 10-11 17-13 4-1 8-1 12 0 10 3 18 10 21 20 2 6 2 13 0 19-3 10-10 18-20 23-2 1-4 2-6 2z"/></svg>`, optimalHumidity: [60, 90], growthRate: 0.005, initialSize: 40 },
                 fern: { category: 'plant', name: '양치류', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24"><path fill="#386641" d="M16.82,19.22C16.41,19.72 15.79,20 15.17,20H8.83C8.21,20 7.59,19.72 7.18,19.22L2,12.84V11.53C2,10.68 2.68,10 3.53,10H20.47C21.32,10 22,10.68 22,11.53V12.84L16.82,19.22M12,4C10.83,4 9.83,4.56 9.22,5.5L14.78,5.5C14.17,4.56 13.17,4 12,4M9.22,6.5L7.18,9H16.82L14.78,6.5H9.22Z" /></svg>`, optimalHumidity: [50, 80], growthRate: 0.008, initialSize: 50 },
                 succulent: { category: 'plant', name: '다육이', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24"><path fill="#A7C957" d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4Z" /></svg>`, optimalHumidity: [20, 40], growthRate: 0.003, initialSize: 35 },
-                largeRock: { category: 'centerpiece', name: '바위', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24"><path fill="#8d8d8d" d="M19.9,12.66C19.5,10.79 18.1,9.2 16.29,8.53C16.21,8.5 16.13,8.48 16.05,8.47C15.8,8.41 15.55,8.38 15.29,8.38C14.7,8.38 14.15,8.5 13.68,8.72C12.6,7.5 11.04,6.75 9.29,6.75C6.9,6.75 4.9,8.23 4.2,10.33C4.1,10.64 4,10.97 4,11.31C4,12.93 4.84,14.36 6.08,15.26C6.21,15.36 6.33,15.45 6.45,15.53C6.45,15.53 6.45,15.53 6.46,15.54C7.9,16.5 9.6,17.25 11.44,17.25H12.5C16.3,17.25 19.41,15.21 19.9,12.66Z" /></svg>`, initialSize: 120 },
+                largeRock: { category: 'centerpiece', name: '바위', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24"><path fill="#8d8d8d" d="M19.9,12.66C19.5,10.79 18.1,9.2 16.29,8.53C16.21,8.5 16.13,8.48 16.05,8.47C15.8,8.41 15.55,8.38 15.29,8.38C14.7,8.38 14.15,8.5 13.68,8.72C12.6,7.5 11.04,6.75 9.29,6.75C6.9,6.75 4.9,8.23 4.2,10.33C4.1,10.64 4,10.97 4,11.31C4,12.93 4.84,14.36 6.08,15.26C6.21,15.36 6.33,15.45 6.45,15.53C6.45,15.53 6.45,15.53 6.46,15.54C7.9,16.5 9.6,17.25 11.44,17.25H12.5C16.3,17.25 19.41,15.21 19.9,12.66Z"/></svg>`, initialSize: 120 },
                 largeDriftwood: { category: 'centerpiece', name: '유목', svg: `<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 24 24"><path fill="#7f5539" d="M20.4,9.2C19.6,5.9 16.8,3.5 13.5,3.1C10.2,2.7 7.1,4.3 5.5,7.1C3.9,9.9 4.7,13.5 7.2,15.6C7.2,15.6 10.3,18.8 10.8,19.3C11.3,19.8 12.1,20.2 12.9,20.2C13.7,20.2 14.5,19.8 15,19.3C15.5,18.8 18.6,15.6 18.6,15.6C21.1,13.5 21.9,9.9 20.4,9.2Z" /></svg>`, initialSize: 140 }
             };
 
@@ -361,7 +361,7 @@
                     const rotatedAngleRad = initialAngleRad + totalRotationRad;
                     const radius = item.depth * 48;
                     const cx = 50 + Math.sin(rotatedAngleRad) * radius;
-                    const cy = 50 - Math.cos(rotatedAngleRad) * radius; 
+                    const cy = 50 + Math.cos(rotatedAngleRad) * radius; 
                     
                     const dot = document.createElementNS(svgNS, 'circle');
                     dot.setAttribute('cx', cx);
@@ -444,7 +444,7 @@
                     const clickRadius = Math.sqrt(dx*dx + dy*dy);
                     if (clickRadius > rect.width / 2) return;
 
-                    const angleRad = Math.atan2(dx, -dy);
+                    const angleRad = Math.atan2(dx, dy);
                     const depth = clickRadius / (rect.width / 2);
 
                     const totalRotationRad = gameState.rotationAngle * Math.PI / 180;
@@ -505,7 +505,8 @@
                 const deltaX = clientX - gameState.lastDragX;
                 gameState.lastDragX = clientX;
                 const sensitivity = 360 / (terrarium.offsetWidth * 2);
-                gameState.rotationAngle -= deltaX * sensitivity;
+                // [수정] 드래그 방향과 동일하게 회전하도록 부호를 변경
+                gameState.rotationAngle += deltaX * sensitivity;
             }
 
             function handleInteractionEnd() {
